Refactor ProductController and ProductService to use constructor injection